Match background-color prefix to bootstrap naming

--- a/Resources/Private/Templates/Context/Default.html
+++ b/Resources/Private/Templates/Context/Default.html
@@ -5,7 +5,7 @@
 
 	full-width container to keep option for background color & border
 </f:comment>
-<div class="context background-{settings.background} border-{settings.border}">
+<div class="context bg-{settings.background} border-{settings.border}">
 	<f:comment>
 		container with fluid width setup, so its always 100% wide.
 		@see https://getbootstrap.com/docs/4.6/layout/overview/#containers
