--- a/Resources/Private/Templates/Context/Normal.html
+++ b/Resources/Private/Templates/Context/Normal.html
@@ -5,7 +5,7 @@
 
 	full-width container to keep option for background color & border
 </f:comment>
-<div class="context background-{settings.background} border-{settings.border}">
+<div class="context bg-{settings.background} border-{settings.border}">
 	<f:comment>
 		Container with default width constraints according to responsive breakpoints.
 		@see https://getbootstrap.com/docs/4.6/layout/overview/#containers
